特例カードを表示できるように変更

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <label for="search_input">検索したい文字列</label>
             <input name="search_input" id="search_input" type="text" size="30">
             <input id="search_button" type="button" value="検索">
+            <label for="checkbox_for_special_card">特例カードを黄色で表示する</label>
+            <input id="checkbox_for_special_card" type="checkbox">
         </div>
         <script src="./data.js"></script>
         <script src="./index.js"></script>
